# beckon

./: .gitignore  .projections.json  README.md  pyproject.toml
.github/workflows/: publish.yml
src/beckon/: __init__.py  __init__.pyi  collection.py  interfaces.py  registry.py
src/beckon/django/: __init__.py  apps.py
src/summon/: __init__.py  __init__.pyi  interfaces.py  registry.py
src/summon/django/: __init__.py  apps.py
tests/: models.py  serializers.py  settings.py  test_registry.py  test_types.py
